# sml_json_server

./: .gitignore  CMakeLists.txt  build_artifact.py
.github/workflows/: main.yml
cmake/tools/: get_dependencies.sh
server/: CMakeLists.txt  client.cpp  main.c  server.cpp
